--- a/Articles.html
+++ b/Articles.html
@@ -33,25 +33,25 @@
   	<div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link text-white" href="#">الرئيسية<span class="sr-only">(current)</span></a>
+        <a class="nav-link text-white" href="Articles.html">الرئيسية<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">سياسة الخصوصية</a>
+        <a class="nav-link text-white" href="privacy.html">سياسة الخصوصية</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">القوانين والأحكام</a>
+        <a class="nav-link text-white" href="terms.html">القوانين والأحكام</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">عن موقع</a>
+        <a class="nav-link text-white" href="categories.html">عن موقع</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">فريق التحرير</a>
+        <a class="nav-link text-white" href="editorTeams.html">فريق التحرير</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">من نحن</a>
+        <a class="nav-link text-white" href="whosUs.html">من نحن</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">اتصل بنا</a>
+        <a class="nav-link text-white" href="conttactus.html">اتصل بنا</a>
       </li>
     </ul>
   </div>
@@ -125,7 +125,7 @@
                 <div class="container-fluid">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item active">
-                            <a class="nav-link text-white" href="#">الرئيسية</a>
+                            <a class="nav-link text-white" href="Articles.html">الرئيسية</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#">التحليل الإقتصادي</a>
